[package]
name = "game-gl"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
glutin = { git = "https://github.com/Kaiser1989/glutin" }
image = "0.23.8"
log = "0.4.11"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { git = "https://github.com/Kaiser1989/android-ndk-rs" }

[build-dependencies]
gl_generator = "0.14.0"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]