[package]
name = "game-gl"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
glutin = "0.30.9"
winit = "0.28.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
image = "0.24.6"
log = "0.4.11"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
jni = "0.21.1"

[build-dependencies]
gl_generator = "0.14.0"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
opengles_version_major = 3
opengles_version_minor = 0