[package]
name = "game-gl"
version = "1.0.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]

desktop = []

egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita-notitle"]

[dependencies]
glutin = "0.30.9"
winit = { version = "0.28.6", features = [ "android-native-activity" ] }
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
once_cell = "1.18.0"
image = "0.24.6"
log = "0.4.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[build-dependencies]
gl_generator = "0.14.0"
cfg_aliases = "0.1.1"
