[package]
name = "game-gl"
version = "1.0.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]

desktop = []

egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = [
  "glutin/wayland",
  "winit/wayland",
  "winit/wayland-dlopen",
  "winit/wayland-csd-adwaita-notitle",
]

[dependencies]
glutin = "0.32.1"
winit = { version = "0.30.5", features = ["android-native-activity"] }
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
image = "0.25.4"
log = "0.4.11"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.14.1"
ndk = "0.9.0"
jni = "0.21.1"

[build-dependencies]
gl_generator = "0.14.0"
cfg_aliases = "0.2.1"
