[package]
name = "game-gl-example"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2021"

[lib]
#name = "main"
crate-type = ["cdylib"]

[[bin]]
name = "game-gl-example"
path = "src/lib.rs"
required-features = ["desktop"]

[features]
desktop = []

[dependencies]
game-gl = { path = "../game_gl" }
log = "0.4.11"

[package.metadata.android]
build_targets = [
  "armv7-linux-androideabi",
  "aarch64-linux-android",
  "i686-linux-android",
  "x86_64-linux-android",
]
opengles_version_major = 3
opengles_version_minor = 2
assets = "assets"
path = "src/lib.rs"
name = "game-gl-example"
